Fix: layout issues

--- a/src/Components/Projects/ProjectDetail.module.css
+++ b/src/Components/Projects/ProjectDetail.module.css
@@ -92,6 +92,10 @@
     width: auto;
   }
 
+  .tags {
+    flex-direction: column;
+  }
+
   .tags ul li {
     padding: 0.1rem;
   }
